--- a/src/global.css
+++ b/src/global.css
@@ -1,8 +1,23 @@
-.container{
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,400&display=swap');
+
+
+/* .container{
     height: 245px;
     width: 425px;
     background-color: rgba(194, 194, 194, 0.350);
     text-align: center;
     padding-top: 5px;
     margin: 35vh auto;
+} */
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    font-size: 25px;
+    font-weight: 100;
+}
+body{
+    /* background-color: rgba(43, 104, 226, 0.333); */
 }
